# bookstore

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pi.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py  0002_rename_categoriy_product_category.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_category_viewst.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
