[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["Fred Melchior"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
factory-boy = "^3.3.0"
django = "^4.2.5"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
psycopg2-binary="^2.9.6"
whitenoise="^6.5.0"
gunicorn="^20.1.0"
flake8="^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
